updater tested for the server

--- a/updater.html
+++ b/updater.html
@@ -24,7 +24,7 @@
 
 
 <script>
-var url = "http://130.233.84.131/dogfile.json";
+var url = "status";
 var characters = {}
 characters ['piggy'] = {}
 characters ['wifi'] = {}
