--- a/updater.html
+++ b/updater.html
@@ -24,7 +24,7 @@
 
 
 <script>
-var url = "status";
+var url = "http://35.195.75.109:5000/updater";
 var characters = {}
 characters ['piggy'] = {}
 characters ['wifi'] = {}
