local version that works for testing

--- a/updater.html
+++ b/updater.html
@@ -24,7 +24,8 @@
 
 
 <script>
-var url = "http://35.195.75.109:5000/updater";
+//var url = "http://35.195.75.109:5000/updater";
+var url = "dogfile.json";
 var characters = {}
 characters ['piggy'] = {}
 characters ['wifi'] = {}
